force-app/main/default/objects/Krow_Project__c/Krow_Project__c.object-meta.xml
<CustomObject>
    <label>Krow Project</label>
    <nameField>
        <label>Krow Project Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Krow Projects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>