force-app/main/default/objects/Krow_Project__c/fields/isTemplateKrow__c.field-meta.xml
<CustomField>
    <fullName>isTemplateKrow__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isTemplateKrow</label>
    <type>Checkbox</type>
</CustomField>