force-app/main/default/objects/Krow_Project__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <displayFormat>N-{0}</displayFormat>
    <label>Name</label>
    <type>AutoNumber</type>
</CustomField>