force-app/main/default/objects/Krow_Project__c/fields/Onboarding_type__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_type__c</fullName>
    <label>Onboarding type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customer Onboarding</fullName>
            </value>
            <value>
                <fullName>Installation</fullName>
            </value>
            <value>
                <fullName>Template</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>